deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waves
  labels:
    app.kubernetes.io/name: waves
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: waves
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
